@@ -41,6 +41,7 @@
  - Fix exception when running with no arguments on Python 3. [Daniel Watkins]
  - Centos: detect/expect use of systemd on centos 7. [Brian Rak]
  - Azure: remove dependency on walinux-agent [Daniel Watkins]
+ - EC2: know about eu-central-1 availability-zone (LP: #1456684)
 0.7.6:
  - open 0.7.6
  - Enable vendordata on CloudSigma datasource (LP: #1303986)
